cupt (2.3.0~) UNRELEASED; urgency=low

  * lib:
    - system/resolvers/native:
      - Removing automatically installed packages: stopped considering
        those inter-package relations which are satisfied by some
        non-removable package.
    - download/progresses/console:
      - Printing 'download failed' messages: use a download number instead of
        the download description.
      - Printing 'download failed' messages: reformatted to have the error
        string earlier in the string and match the 'Get:<number>' style.
    - config:
      - New options 'cupt::cache::limit-releases::by-archive',
        'cupt::cache::limit-releases::by-archive::type'.
      - New options 'cupt::cache::limit-releases::by-codename',
        'cupt::cache::limit-releases::by-codename::type'.
    - cache:
      - Honor 'cupt::cache::limit-releases::*' options.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 22 Sep 2011 11:33:25 +0300

cupt (2.2.0) unstable; urgency=low

  * Upload to unstable.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 17 Sep 2011 16:17:38 +0300

cupt (2.2.0~rc2) experimental; urgency=low

  * lib:
    - system/worker:
      - Downloading of index data should continue regardless of the download
        result of Release signature. Thanks to Karol Kozłowski for the report.
      - Don't run pre-install-packages hooks if there is no packages to
        unpack.
      - [Jonathan Nieder] Switch back to system() for running commands without
        an input, such as dpkg, providing them a standard input from
        a terminal. Fixes the regression since 2.2.0~rc1. (Closes: #640849)
    - hashsums:
      - Don't check gcrypt version despite what is advised in its manual.
        Linker does its work fine.
  * debian:
    - control:
      'libcupt2-0': set Breaks against download methods earlier than 2.0.0~rc1
      because of the redirect download option change.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 11 Sep 2011 13:52:25 +0300
