@@ -1,5 +1,9 @@
 cupt (2.3.0~) UNRELEASED; urgency=low
 
+  * console:
+    - Common options:
+      - New options '--include-archives', '--exclude-archives',
+        '--include-codenames', --exclude-codenames'.
   * lib:
     - system/resolvers/native:
       - Removing automatically installed packages: stopped considering
